# https---github.com-ScienceStar-ros_robot

./: PROJECT_SUMMARY.md  README_QUICKSTART.md  analyze_trajectories.py  install_ros.sh  run_all_trajectories.py  run_standalone.py
src/robot_trajectory_sim/: CMakeLists.txt  README.md  package.xml
src/robot_trajectory_sim/config/: trajectory.rviz  trajectory_params.yaml
src/robot_trajectory_sim/launch/: trajectory_sim.launch
src/robot_trajectory_sim/scripts/: trajectory_simulator_node.py  trajectory_visualizer.py
trajectories/: trajectory_circle_20260218_013610.json  trajectory_circle_20260218_013633.json  trajectory_circle_20260218_013938.json  trajectory_circle_20260218_014007.json  trajectory_circle_20260218_020149.json  trajectory_circle_20260218_021734.json  trajectory_figure8_20260218_013637.json  trajectory_figure8_20260218_014011.json  trajectory_figure8_20260218_020153.json  trajectory_line_20260218_013642.json  trajectory_line_20260218_014016.json  trajectory_line_20260218_020158.json  trajectory_sine_20260218_013639.json  trajectory_sine_20260218_014013.json  trajectory_sine_20260218_020155.json
